fix(OUT-1362): cursor style for custom scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ a {
   scrollbar-width: none;
   -ms-overflow-style: none;
   position: relative;
+  cursor: default;
 }
 
 .scroll-thumb {
